<resources>
    <string name="app_name">OnlineQuiz</string>
    <string name="rememberMe">Remember Me</string>
    <string name="register">New Register</string>
    <string name="forgetpassword">Forgot Password</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login as Student</string>
    <string name="loginAsTxtview">Login As</string>
    <string name="registerTxtview">Registration</string>
    <string name="registerbtn">Register as Student</string>
    <string name="alreadyregistertxt">Already Register</string>
    <string name="takePic">Click to take Picture</string>
    <string name="phone">Phone</string>
    <string name="accommodation">Accommodation</string>
    <string name="name">Name</string>
    <string name="matricNo">Matric No</string>
    <string name="dialogtakepicture">Take Picture?</string>
    <string name="dialogtakepicturea">Make sure to use your own picture</string>
    <string name="yesbutton">Yes</string>
    <string name="nobutton">No</string>
    <string name="registerdialognew">Register new account</string>
    <string name="registrationprocess">Registration in progress</string>
    <string name="registerfor">Register for</string>
    <string name="attemptquiz">Attempt Quiz</string>
    <string name="welcometxtview">Welcome</string>
    <string name="resetpasswordtxtview">Reset Password</string>
    <string name="resetpswdtxtview">Reset Password</string>
    />

    <string-array name="accomodation">
        <item>All</item>
        <item>Alor Setar</item>
        <item>Jitra</item>
        <item>Sme Bank</item>
        <item>Bank Rakyat</item>
        <item>Proton</item>
        <item>Yab</item>
        <item>Petronas</item>
        <item>Bank Muamalat</item>
        <item>Grant</item>
        <item>Tradewinds</item>
    </string-array>
    <string-array name="category">
        <item>All</item>
        <item>Programming</item>
        <item>Networking</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="btn_Update">Update</string>
    <string name="myprofile">MY PROFILE</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">AIzaSyANuiq3WY9CEY8RZy3siqOOI8jPM2EioFY</string>
    <string name="location">Location</string>
    <string name="myquizbtn">My Quiz</string>
    <string name="selectlocation">Location</string>
    <string name="createquiz">Create New Quiz</string>
    <string name="store">Online Quiz Store</string>
    <string name="addon">Feature</string>
    <string name="RM" />
    <string name="description">Description</string>
    <string name="rm">RM</string>
    <string name="addons">Addons</string>
    <string name="clicktopurchase">Click to Purchase</string>
    <string name="welcome">Welcome</string>
    <string name="category">Category</string>
    <string name="previos">Previous</string>
    <string name="next">Next</string>
    <string name="addquiz">Create Quiz</string>
    <string name="code">Code</string>
    <string name="quiznum">Question No</string>
    <string name="quizId">Quiz ID</string>
    <string name="submit">Submit</string>
    <string name="cate">Catergory</string>
    <string name="createq">Create Quiz</string>
    />


</resources>
