<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.03"
            app:srcCompat="@mipmap/icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.02"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.ebanx.swipebtn.SwipeButton
                android:id="@+id/swipe_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:button_background="@mipmap/slidebg"
                app:button_bottom_padding="10dp"
                app:button_image_height="60dp"
                app:button_image_width="60dp"
                app:button_left_padding="20dp"
                app:button_right_padding="20dp"
                app:button_top_padding="20dp"
                app:has_activate_state="true"
                app:initial_state="disabled"
                app:inner_text="STUDENT"
                app:button_trail_drawable="@drawable/buttonsquaredark"
                app:inner_text_background="@drawable/buttonsquare"
                app:inner_text_bottom_padding="12dp"
                app:inner_text_color="@android:color/white"
                app:inner_text_size="14sp"
                app:inner_text_top_padding="12dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.05"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingTop="0dp"
            android:textColorHint="@android:color/background_light" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@android:color/background_light" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@android:style/Widget.Holo.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/rememberMe"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05"
            android:background="@drawable/buttonsquaredark"
            android:text="@string/loginBtn"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>